# DesignPatterns-COS214

./: .gitignore  CMakeLists.txt  CreateCMAKE.txt  README.md
COS 214 Coding/Lecture code/Command/: Command.h  DanceCommand.h  DieCommand.h  Remote.h  ReviveCommand.h  Robot.h  main.cpp
COS 214 Coding/Lecture code/L03 - Memento/: MomentoProduct.vpp
COS 214 Coding/Lecture code/Mediator/: CellTower.h  Colleague.h  Mediator.h  Messenger.h  main.cpp
COS 214 Coding/Lecture code/MyBridge/: AbstractionStack.h  MyArrayImplementor.h  MyListImplementor.h  MyStackImplementor.h  RA_HanoiStack.h  RA_LIFOStack.h  RA_WackStack.h  main  main.cpp  makefile
COS 214 Coding/Lecture code/MyFlyweight/: FlyweightTest.cpp  Goodie.h  Player.h  PlayerFactory.h  Terrorist.h  main
COS 214 Coding/Lecture code/MyPatterns/: HouseBuilder.cpp  MyBooleanIntepreter.cpp  MyBridge.cpp  MyMathIntepreter.cpp  MyMediator.cpp  MyProxy.cpp  MyShapeFacade.cpp  MyVisitor.cpp  MyVisitor2  MyVisitor2.cpp  NetworkProxy.cpp  makefile
COS 214 Coding/Lecture code/Observer/: MyObserver.cpp
COS 214 Coding/Lecture code/Test/: main.cpp
COS 214 Coding/Practicals/Practical2/: PA2.vpp
COS 214 Coding/Practicals/Practical3/: AddOn.h  Aero.h  AttackPlayStyle.h  Chocolate.h  Confectionary UML.vpp  Confectionary.h  ConfectionaryFactory.h  DoesNotExist.h  GiftBasket.h  LindtFactory.h  NormalBattleState.h  PhysicalAttackPlayStyle.h  Ribbon.h  RunPlayStyle.h  main.cpp
Introduction/Task2/Task2/: Task2
Introduction/Task3/: main  main.cpp
Introduction/Task5/: Task5  makefile
Introduction/Task6/: UserManager.cpp  UserManager.h
Lecture code/L02 - ArrayList/: ArrayListTest.cpp
Lecture code/L02 - ArrayList/__MACOSX/: ._ArrayList.cpp  ._ArrayList.h  ._ArrayListTest.cpp  ._ArrayListTest_S.cpp
Memento_Composite_Observer_Iterator/Task2/: Directory.cpp  File.h  Node.h
Memento_Composite_Observer_Iterator/Task3/: Directory.cpp  Directory.h  File.h  NodeIterator.h  main.cpp
Memento_Composite_Observer_Iterator/Task5 (GDB)/: ConcreteObserver.h  Directory.cpp  Directory.h  Root.h  main  makefile
Memento_Composite_Observer_Iterator/Task6/: Directory.cpp  Navigator.h  NavigatorMemento.h  main.cpp
State_Decorator_AbstractFactory/: AeratedChocolate.h  AgileBattleState.h  BattleState.h  BattleStateContext.h  CadburyFactory.h  Confectionary.h  ConfectionaryFactory.h  DairyMilk.h  DairyMilkBubbly.h  GiftBasket.h  Lindor.h  MilkyBar.h  NestleFactory.h  PlayStyle.h  Pokemon.h  PokemonUML.vpp  StrongBattleState.h  main.cpp
TemplateMethod_Factorymethod_Memento_Prototype/: Cannibal.cpp  Cannibal.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Gorilla.cpp  Gorilla.h  GorillaFactory.cpp  JaguarFactory.cpp  PA2.vpp  SaveRestore.cpp  Snake.h  SnakeFactory.cpp  SquadMember.cpp  makefile  save.txt
(+136 files in other folders)
